Now is possible link plans to quotes
